# martian-robots-python

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: dependabot.yml  pull_request-template.md
.github/workflows/: branch.yaml  linting.yml  tests.yml
src/martian_robots/v1/: main.py
src/martian_robots/v2/: __init__.py  main.py
tests/: conftest.py
tests/fixtures/: input.txt
tests/functional/v1/: test_process_lines.py
tests/unit/v2/: test_grid.py  test_robot.py  test_simulator.py
